# ContextiPY

./: README.md
solutions/claude46thinking1/: README.md  pyproject.toml
solutions/claude46thinking1/docs/: validation1.md  validation2.md
solutions/claude46thinking1/src/pcontext/: __init__.py  __main__.py
solutions/claude46thinking1/src/pcontext/api/: __init__.py  decorators.py  file_types.py  param.py  script_meta.py
solutions/claude46thinking1/src/pcontext/core/: __init__.py  constants.py
solutions/cto/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LOGS_WINDOW_IMPLEMENTATION.md  README.md  pyproject.toml
solutions/cto/.github/workflows/: build.yml
solutions/cto/contextipy/: __init__.py  __main__.py  actions.py
solutions/cto/contextipy/cli/: __init__.py  main.py
solutions/cto/contextipy/config/: __init__.py  paths.py  persistence.py  settings.py
solutions/cto/contextipy/core/: __init__.py  decorators.py  metadata.py  params.py  types.py
solutions/cto/contextipy/execution/: __init__.py  action_handler.py  context_entry.py  script_runner.py  service_manager.py
solutions/cto/contextipy/logging/: __init__.py  logger.py
solutions/cto/contextipy/os_integration/: __init__.py  autostart.py  linux_integration.py  windows_registry.py
solutions/cto/contextipy/questions/: __init__.py  demo.py  models.py  types.py  ui.py  ui_demo.py
solutions/cto/contextipy/scanner/: __init__.py  dependency_installer.py  registry.py  script_scanner.py
solutions/cto/contextipy/services/: __init__.py
solutions/cto/contextipy/tray/: __init__.py
solutions/cto/contextipy/ui/: README.md  TRAY_MANUAL_TEST.md  TRAY_README.md  __init__.py  application.py  async_utils.py  demo.py  icons.py  theme.py  tray.py  tray_demo.py  widgets.py
solutions/cto/contextipy/ui/resources/: contextipy.desktop.template
solutions/cto/contextipy/ui/windows/: ALL_SCRIPTS_README.md  __init__.py  all_scripts.py  all_scripts_demo.py  logs.py  logs_demo.py  params_editor.py  params_editor_demo.py  processes.py  services.py  settings.py  settings_demo.py
solutions/cto/contextipy/util/: __init__.py
solutions/cto/contextipy/utils/: __init__.py  file_utils.py  notifications.py
solutions/cto/docs/: ALL_SCRIPTS_WINDOW_QA.md  ASK_DIALOG_IMPLEMENTATION.md  ASK_DIALOG_QA_CHECKLIST.md  MANUAL_VERIFICATION.md  advanced_topics.md  dependency_installer.md  packaging.md  quickstart.md  troubleshooting.md
solutions/cto/examples/: README.md  ask_dialog_demo.py  file_processor.py  hello_world.py  journal_service.py
solutions/cto/scripts/: README.md  build.py  build_nuitka.py
solutions/cto/tests/: __init__.py  conftest.py  test_action_handler.py  test_actions.py  test_config_paths.py  test_config_persistence.py  test_config_settings.py  test_core_decorators.py  test_core_metadata.py  test_core_params.py  test_core_types.py  test_dependency_installer.py  test_dependency_installer_integration.py  test_examples.py  test_execution_context_entry.py  test_execution_script_runner.py  test_execution_service_manager.py  test_file_utils.py  test_harness_config.py  test_harness_decorators.py  test_harness_execution.py  test_harness_platform.py  test_harness_scanner.py  test_import.py  test_logging_logger.py  test_notifications.py  test_os_integration_autostart.py  test_os_integration_linux_integration.py  test_os_integration_windows_registry.py  test_questions_models.py  test_questions_types.py  test_questions_ui.py  test_questions_validation.py  test_scanner_registry.py  test_scanner_script_scanner.py  test_ui_module_import.py  test_ui_theme.py  test_ui_tray.py  test_ui_windows_all_scripts.py  test_ui_windows_logs.py  (+4 more)
solutions/cto/tests/fixtures/scripts/: simple_script.py
solutions/cto/tests/fixtures/scripts/media/: image_processor.py
solutions/cto/tests/fixtures/scripts/services/: service_module.py
solutions/cto/tests/fixtures/scripts/utilities/: text_utils.py
solutions/gpt5.4high1/: .gitignore  README.md  pyproject.toml
solutions/gpt5.4high1/native/windows-shell/: Cargo.toml
solutions/gpt5.4high1/native/windows-shell/src/: bridge.rs  dev_support.rs  ipc.rs  lib.rs  main.rs  models.rs  shell_extension.rs
solutions/gpt5.4high1/src/pcontext/: __init__.py  actions.py  cli.py  config.py  metadata.py  questions.py  windows_gui_entry.py
solutions/gpt5.4high1/src/pcontext/agent/: __init__.py  catalog.py  mock_registry.py  registry.py  server.py  service_manager.py
solutions/gpt5.4high1/src/pcontext/gui/: __init__.py  action_bridge.py  app.py  ask_bridge.py  ask_dialog.py  backend.py  icons.py  main_window.py  menu_bridge.py  menu_dialog.py  param_dialog.py  style.py  tasks.py  windows_shell_diagnostics.py
solutions/gpt5.4high1/src/pcontext/platform/windows/: __init__.py  autostart.py
solutions/gpt5.4high1/src/pcontext/registrar/: __init__.py  introspection.py  models.py  registration.py  subprocess_runner.py  venv_manager.py  worker.py
solutions/gpt5.4high1/src/pcontext/runner/: __init__.py  bindings.py  execution.py  models.py  service_models.py  service_worker.py  subprocess_runner.py  worker.py
solutions/gpt5.4high1/src/pcontext/runtime/: __init__.py  action_codec.py  action_executor.py  ask_runtime.py  discovery.py  ipc_client.py  ipc_models.py  matching.py  menu_runtime.py  python_env.py  question_models.py  shell.py  subprocess_entrypoints.py
solutions/gpt5.4high1/src/pcontext/sdk/: decorators.py  inputs.py  params.py
solutions/gpt5.4high1/src/pcontext/storage/: __init__.py  models.py  state.py  views.py
solutions/gpt5.4high1/tests/: test_action_executor.py  test_agent_catalog.py  test_command_usage_stats.py  test_direct_invocation.py  test_matching.py  test_menu_runtime.py  test_questions.py  test_registrar_introspection.py  test_registration.py  test_runner_execution.py  test_state_integration.py  test_state_store.py  test_windows_autostart.py  test_windows_shell_diagnostics.py
solutions/gpt5.4high1/tools/: build_windows_bundle.ps1  windows_background_dev_register.ps1  windows_cleanup.ps1  windows_install_bundle.ps1  windows_shell_dev_register.ps1  windows_uninstall_bundle.ps1
(+1 files in other folders)
