[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcontext"
version = "0.1.0"
description = "Библиотека для интеграции Python-скриптов в контекстное меню ОС"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.5",
]

# Команда «pcontext» в терминале → вызывает main() из __main__.py
[project.scripts]
pcontext = "pcontext.__main__:main"

# Говорим сборщику, что пакет находится в папке src/
[tool.hatch.build.targets.wheel]
packages = ["src/pcontext"]

# Настройки линтера (опционально, для удобства разработки)
[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"