[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "contextipy"
version = "0.1.0"
description = "A context-aware system tray application for managing workspaces and environments"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "contextipy"}]
include = [
    { path = "contextipy/ui/resources", format = "sdist" },
    { path = "contextipy/ui/resources", format = "wheel" },
]
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = "^3.10"
PySide6 = "^6.5.0"
watchdog = "^3.0.0"
psutil = "^5.9.0"
pywin32 = {version = "^306", markers = "sys_platform == 'win32'"}
win10toast = {version = "^0.9", markers = "sys_platform == 'win32'"}
pyobjc-framework-Cocoa = {version = "^10.0", optional = true, markers = "sys_platform == 'darwin'"}
dbus-python = {version = "^1.3.2", optional = true, markers = "sys_platform == 'linux'"}
notify2 = {version = "^0.3.1", markers = "sys_platform == 'linux'"}

[tool.poetry.extras]
mac = ["pyobjc-framework-Cocoa"]
linux = ["dbus-python"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.0"
ruff = "^0.1.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
contextipy-tray = "contextipy.cli.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.isort]
known-first-party = ["contextipy"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "psutil.*",
    "watchdog.*",
    "win10toast.*",
    "notify2.*",
    "win32api.*",
    "win32con.*",
    "win32gui.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=contextipy",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ui: marks tests that require GUI components",
    "windows_only: marks tests that only run on Windows",
    "linux_only: marks tests that only run on Linux",
    "macos_only: marks tests that only run on macOS",
]

[tool.coverage.run]
branch = true
source = ["contextipy"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
