[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pcontext"
version = "0.1.0"
description = "PContext: пользовательские Python-скрипты в контекстном меню Windows и Linux"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.8.2",
  "PySide6>=6.7.2",
  "pyqtdarktheme>=2.1.0",
  "psutil>=6.0.0",
  "pyperclip>=1.9.0",
  'typing-extensions>=4.12.2; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.2",
  "ruff>=0.6.4",
]

[project.scripts]
pcontext = "pcontext.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pcontext"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true