[package]
name = "pcontext-bridge"
version = "0.1.0"
edition = "2021"
description = "Rust bridge and native Explorer shell integration for PContext"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
windows = { version = "0.58.0", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.58.0"