[package]
name = "pcontext-bridge"
version = "0.1.0"
edition = "2021"
description = "Rust bridge for PContext Windows integration"

[lib]
name = "pcontext_native"
crate-type = ["rlib"]

[[bin]]
name = "pcontext-bridge"
path = "src/main.rs"

[[bin]]
name = "pcontext-launcher"
path = "src/bin/pcontext_launcher.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }